# discord_time_stamp

./: .gitignore  Cargo.toml  README.md
src/: main.rs  unix_time_stamp.rs
