[package]
name = "discord_time_stamp"
authors = ["FlorianXXIV"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serenity = "0.11.5"
tokio = { version="1.21.2", features = ["macros", "rt-multi-thread"] }