[package]
name = "discord_time_stamp"
authors = ["FlorianXXIV"]
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.*", features = ["macros", "parsing"] }
serenity = "0.11.5"
tokio = { version="1.21.2", features = ["macros", "rt-multi-thread"] }