[package]
name = "discord_time_stamp"
authors = ["FlorianXXIV"]
version = "0.2.2"
description = "A discord bot that prints discord timestamps"
repository = "https://github.com/FlorianXXIV/discord_time_stamp"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
documentation = "https://docs.rs/discord_time_stamp"
keywords = ["discord", "bot", "unix-timestamps"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.*", features = ["macros", "parsing"] }
serenity = {version="0.11.5", default-features=false, features=[
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework"
]}
tokio = { version="1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
